add first command

--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
 </head>
 <body>
 
+	<table>
+	
+		<h1>Commandes terminal Linux</h1> <!--titre du tableau-->	
+		
+		<tr> <!--titres des colonnes-->
+			<th>Commandes</th>
+			<th>Signification</th>
+			<th>Description</th>
+			<th>Exemple d'utilisation</th> 
+		</tr>
+
+
+
+
+
+
+
+	</table>
+
 </body>
 </html>
