--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<table>
-	
+
 		<h1>Commandes terminal Linux</h1> <!--titre du tableau-->	
 		
 		<tr> <!--titres des colonnes-->
@@ -19,7 +19,28 @@
 			<th>Exemple d'utilisation</th> 
 		</tr>
 
+		<tr> <!--première commande-->
+			<td class="underline">ls</td> 
+			<td class="underline">list segment</td>
+			<td class="underline">Liste un répertoire</td>
+			<td class="underline">ls -a : liste tous les fichiers et répertoires</td>
 
+		</tr>
+
+		<tr> <!--deuxième commande-->
+			<td>cd</td>
+			<td>change directory</td>
+			<td>Permet de naviguer dans les répertoires</td>
+			<td>cd .. : permet de remonter au répertoire parent</td>
+
+		</tr>
+
+		<tr> <!--troisième commande-->
+			<td class="underline">mv</td>
+			<td class="underline">move</td>
+			<td class="underline">Permet de déplacer ou renomer des fichiers</td>
+			<td class="underline">mv monFichier Rep/ : déplace mF dans Rep</td>
+		</tr>
 
 
 
