--- a/index.html
+++ b/index.html
@@ -42,7 +42,26 @@
 			<td class="underline">mv monFichier Rep/ : déplace mF dans Rep</td>
 		</tr>
 
+		<tr> <!--quatrième commande-->
+			<td>cp</td> 
+			<td>copy</td>
+			<td>Copie des fichiers</td>
+			<td>cp monFichier Rep/ :  copie mF dans Rep</td>
+		</tr>
 
+		<tr> <!--cinquième commande-->
+			<td class="underline">rm</td>
+			<td class="underline">remove</td>
+			<td class="underline">Efface des fichiers</td>
+			<td class="underline">rm Fichier : Efface Fichier du répertoire courant</td>
+		</tr>	
+
+		<tr> <!--sixième commande-->
+			<td>mkdir</td>
+			<td>make directory</td>
+			<td>Crée un répertoire vide</td>
+			<td>mkdir Photos : crée le répertoire photos</td>
+		</tr>
 
 
 
