--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
 			<td>mkdir Photos : crée le répertoire photos</td>
 		</tr>
 
+		<tr> <!--septième commande-->
+			<td class="underline">pwd</td>
+			<td class="underline">print working directory</td>
+			<td class="underline">Affiche le répertoire</td>
+			<td class="underline">.</td>
+		</tr>
+
+		<tr> <!--huitième commande-->
+			<td>find</td>
+			<td>rechercher</td>
+			<td>Rechercher des fichiers</td>
+			<td>find monfichier* : Recherche un fichier commençant par "monfichier"</td>
+		</tr>
+
+		<tr> <!--neuvième commande-->
+			<td class="underline">grep</td>
+			<td class="underline">global regular expression print</td>
+			<td class="underline">Recherche une chaîne de caractères dans les fichiers</td>
+			<td class="underline">grep -n montexte monfichier : Retourne toutes les lignes ainsi que leur numéro où montexte apparait dans monfichier </td>
+		</tr>
 
 
 	</table>
