--- a/index.html
+++ b/index.html
@@ -84,6 +84,30 @@
 			<td class="underline">grep -n montexte monfichier : Retourne toutes les lignes ainsi que leur numéro où montexte apparait dans monfichier </td>
 		</tr>
 
+		<tr> <!--dixième commande-->
+			<td>cat</td>
+			<td>concatenate</td>
+			<td>Affiche le contenu d'un fichier</td>
+			<td>cat nomFichier : affiche le contenu de monFichier</td>
+
+		</tr>
+
+		<tr> <!--onzième commande-->
+			<td class="underline">more</td>
+			<td class="underline">more</td>
+			<td class="underline">Affiche un fichier page par page</td>
+			<td class="underline">more -sf monFichier : Afficher monFichier page par page</tr>
+
+		</tr>
+
+		<tr> <!--douzième commande-->
+			<td>less</td>
+			<td>less</td>
+			<td>Affiche un fichier permettant la navigation</td>
+			<td>.</td>
+
+		</tr>
+
 
 	</table>
 
