--- a/index.html
+++ b/index.html
@@ -108,8 +108,32 @@
 
 		</tr>
 
+		<tr> <!--treizième commande-->
+			<td class="underline">chmod</td>
+			<td class="underline">change mode</td>
+			<td class="underline">Modifie les permissions d'accès à un fichier ou répertoire</td>
+			<td class="underline">chmod 644 monFichier : autorisation d'écriture et de lecture pour le propriétaire de monFichier et une autorisation de lecture aux autres</td>
 
-	</table>
+		</tr>
+
+		<tr> <!--quatorzième commande-->
+			<td>sudo</td>
+			<td>substitute user -do</td>
+			<td>Permet d'exécuter des commandes en tant qu'un autre utilisateur</td>
+			<td>sudo reboot : Lance la commande reboot avec les droits</td>
+
+		</tr> 
+
+		<tr> <!--quinzième commande-->
+			<td class="underline">apt-get</td>
+			<td class="underline">avanced package tool - get</td>
+			<td class="underline">Permet l'installation et le retrait de packages</td>
+			<td class="underline">apt-get update : Met à jour la liste de packages.</td>
+
+		</tr>
+
+
+	</table> <!--fin du tableau-->
 
 </body>
 </html>
